# sound_math

./: .gitignore  CMakeLists.txt  LICENSE  README.md
configs/: config.txt
docs/: Doxyfile  general.txt
docs/html/: _abstract_designer_8h_source.html  _abstract_estimator_8h_source.html  _abstract_filter_8h_source.html  _abstract_oscillator_8h_source.html  _allpass_8h_source.html  _ambi_decoder_8h_source.html  _biquad_8h_source.html  _block_conv_8h_source.html  _block_vocoder_8h_source.html  _choelsky_8h_source.html  _classic_verb_8h_source.html  _comb_8h_source.html  _compressor_8h_source.html  _conversion_8h_source.html  _d_c_blocker_8h_source.html  _delay_8h_source.html  _differential_estimator_8h_source.html  _dynamic_matrix_8h_source.html  _envelope_8h_source.html  _envelope_follower_8h_source.html  _envelope_follower_buffer_8h_source.html  _f_f_t_8h_source.html  _f_f_t__backup_8h_source.html  _f_i_r_8h_source.html  _f_i_r_designer_8h_source.html  _fast_sine_8h_source.html  _filter_8h_source.html  _freq_shift_8h_source.html  _g_m_m_8h_source.html  _geometric_designer_8h_source.html  _get_opt_8h_source.html  _global_params_8h_source.html  _granulator_8h_source.html  _harmonic_designer_8h_source.html  _hz2_note_8h_source.html  _k_n_n_8h_source.html  _low_frequency_content_8h_source.html  _m_f_c_c_8h_source.html  _mat_expr_8h_source.html  _matrix_8h_source.html  (+643 more)
docs/html/search/: all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_5.js  classes_9.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js
include/: AbstractDesigner.h  AbstractEstimator.h  Allpass.h  AmbiDecoder.h  Biquad.h  BlockConv.h  BlockVocoder.h  Comb.h  Compressor.h  Conversion.h  Delay.h  DynamicMatrix.h  FFT.h  FIRDesigner.h  FastSine.h  Filter.h  FreqShift.h  GetOpt.h  KNN.h  Matrix.h  OnsetDetector.h  TwoPoles.h  ZeroCrossings.h  algorithms.h  features.h  filterType.h  signals.h
include/dsp/: AbstractFilter.h  ClassicVerb.h  DCBlocker.h  DifferentialEstimator.h  EnvelopeFollower.h  EnvelopeFollowerBuffer.h  FFT_backup.h  FIR.h  GeometricDesigner.h  HarmonicDesigner.h  LowFrequencyContent.h  ModelBasedDesigner.h  Noise.h  OnePole.h  ParamSmooth.h  PeriodEstimator.h  RandomDesigner.h  SlopeDetector.h  SpectralChord.h  SpectralEstimator.h  VariState.h
include/helpers/: Tokenizer.h
include/math/: Choelsky.h  GMM.h  MatExpr.h  Matrix.h  VecExpr.h  Vector.h  algorithms.h
include/metatools/: TypeInfo.h  Typelist.h  tag_traits.h
tools/combsyn/: CMakeLists.txt  combsyn.cpp
tools/nebula/: CMakeLists.txt  memCheck.h  nebula.cpp
tools/pconv/: CMakeLists.txt  pconv.cpp
tools/sounder/: CMakeLists.txt  Makefile  scoregen.cpp  sounder.cpp  todo.txt
tools/sounder/samples/: auto.txt  auto2.txt  auto3.txt  mother1.txt  mother2.txt  mother_final_reflets.txt  mother_final_reflets2.txt  reflets_m31.txt  test_mother.txt
tools/soundtypes/: CMakeLists.txt  GlobalParams.h  ModelingSpace.h  SoundTypes.h  memCheck.cpp  soundtypes.cpp  tools.h
tools/soundtypes/configs/: config_old.txt
tools/soundtypes/matlab_framework/: ST_Cluster.m  ST_CreateTypes.m  ST_EstimateRules.m  ST_FeatExtr.m  ST_GenerateSeq.m  ST_STFT.m  ST_Synthesize.m  ST_match.m  ST_mfcc.m  ST_probMerge.m  ST_process.m  test_ST.m  test_STvar.m
tools/soundtypes/matlab_tests/: checkFeatures.m  compare_audio.m  rawScatter3.m  rawread.m
tools/soundtypes/scripts/: config_berkeley.txt  st_prob_gen.txt  st_rematch_1.txt  st_rematch_2.txt
tools/sparkle/: CMakeLists.txt  sparkle.cpp
tools/sparkle/matlab/: phasogram.m  plotOnsets.m  plotSpecEnv.m  testLPC.m
